fix <hr>s not showing up

--- a/src/investigator.less
+++ b/src/investigator.less
@@ -48,3 +48,7 @@ a.entity-link, a.content-link, a.inline-roll {
   backdrop-filter: blur(10px);
   background-image: linear-gradient(to bottom, #000b 0%, #0006 100%);
 }
+
+hr {
+  width: calc(100% - 2em);
+}
